--- a/src/modules/Markdown-Elements/tables.scss
+++ b/src/modules/Markdown-Elements/tables.scss
@@ -18,7 +18,7 @@
     thead tr > th:last-child {
         text-align: var(--anp-table-align-th, center);
     }
-    td {
+    td:not([align]) {
         text-align: var(--anp-table-align-td, center);
     }
 }
